commented out "Test" link in the navbar since we are no longer using that

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <mat-card>
   <section>
     <button [routerLink]="['/']" mat-button>Finances</button>
-    <button [routerLink]="['/test']" mat-button>Testing</button>
+    <!-- <button [routerLink]="['/test']" mat-button>Testing</button> -->
     <button [routerLink]="['/about']" mat-button>About</button>
   </section>
 </mat-card>
