- Got first part of the edit modal validation working. - Started doing a re-work of some of the validation code to extract it out to the validation class

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
@@ -14,10 +14,10 @@
           name="expenseDate"
           formControlName="expenseDate"
         />
-        <!-- @if(formControlHasError(form.controls.expenseDate)){
+        @if(formControlHasError(form.controls.expenseDate)){
         {{ updateFormControlErrorLabelHTML(form.controls.expenseDescription) }}
         <label class="error-label" id="errorLabel_expenseDate"></label>
-        } -->
+        }
       </div>
 
       <!-- Expense Description -->
@@ -32,10 +32,10 @@
           name="expenseDescription"
           formControlName="expenseDescription"
         />
-        <!-- @if(formControlHasError(form.controls.expenseDescription)){
+        @if(formControlHasError(form.controls.expenseDescription)){
         {{ updateFormControlErrorLabelHTML(form.controls.expenseDescription) }}
         <label class="error-label" id="errorLabel_expenseDescription"></label>
-        } -->
+        }
       </div>
 
       <!-- Expense Amount -->
@@ -50,10 +50,10 @@
           name="expenseAmount"
           formControlName="expenseAmount"
         />
-        <!-- @if(formControlHasError(form.controls.expenseAmount)){
+        @if(formControlHasError(form.controls.expenseAmount)){
         {{ updateFormControlErrorLabelHTML(form.controls.expenseAmount) }}
         <label class="error-label" id="errorLabel_expenseAmount"></label>
-        } -->
+        }
       </div>
 
       <!-- Expense Type Name -->
