updated to add in validation for form group for edit modal

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
@@ -259,11 +259,11 @@
           /><label for="isIncome" class="input-label-modal">Income?</label>
         </div>
       </div>
-      <!-- @if(formGroupHasError(form.controls.checkboxes)){
+      @if(formGroupHasError(form.controls.checkboxes)){
       <label class="error-label">{{
         getFormGroupErrorDetails(form.controls.checkboxes)
       }}</label>
-      } -->
+      }
     </form>
   </div>
 </mat-dialog-content>
