--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -247,5 +247,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button (click)="submitNewExpense()" cdkFocusInitial>Add</button>
+  <button mat-button (click)="submitExpense()" cdkFocusInitial>Add</button>
 </mat-dialog-actions>
