updated "edit expense" to use newly created "expense-modal-form" component.

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-edit/expense-dialog-edit.component.html
@@ -1,251 +1,1 @@
-<h2 mat-dialog-title>Edit Expense</h2>
-<mat-dialog-content class="mat-typography">
-  <div>
-    <form [formGroup]="getForm()" class="form-flex-column">
-      <!-- Expense Date -->
-      <div class="control form-group-div">
-        <label for="expenseDate" class="input-label-modal"
-          >Expense Date :</label
-        >
-        <input
-          id="expenseDate"
-          class="input-date input-date-modal"
-          type="date"
-          name="expenseDate"
-          formControlName="expenseDate"
-        />
-        @if(formControlHasError(getForm().controls.expenseDate)){
-        {{ updateFormControlErrorLabelHTML(getForm().controls.expenseDescription) }}
-        <label class="error-label" id="errorLabel_expenseDate"></label>
-        }
-      </div>
-
-      <!-- Expense Description -->
-      <div class="control form-group-div">
-        <label for="expenseDescription" class="input-label-modal"
-          >Expense Description :</label
-        >
-        <input
-          id="expenseDescription"
-          class="input-textbox input-textbox-modal"
-          type="text"
-          name="expenseDescription"
-          formControlName="expenseDescription"
-        />
-        @if(formControlHasError(getForm().controls.expenseDescription)){
-        {{ updateFormControlErrorLabelHTML(getForm().controls.expenseDescription) }}
-        <label class="error-label" id="errorLabel_expenseDescription"></label>
-        }
-      </div>
-
-      <!-- Expense Amount -->
-      <div class="control form-group-div">
-        <label for="expenseAmount" class="input-label-modal"
-          >Expense Amount :</label
-        >
-        <input
-          id="expenseAmount"
-          class="input-textbox input-textbox-modal"
-          type="text"
-          name="expenseAmount"
-          formControlName="expenseAmount"
-        />
-        @if(formControlHasError(getForm().controls.expenseAmount)){
-        {{ updateFormControlErrorLabelHTML(getForm().controls.expenseAmount) }}
-        <label class="error-label" id="errorLabel_expenseAmount"></label>
-        }
-      </div>
-
-      <!-- Expense Type Name -->
-      <div formGroupName="expenseType">
-        <div>
-          <label for="expenseTypeName" class="input-label-modal">
-            Expense Type :
-          </label>
-		  <input
-            id="expenseTypeName"
-            class="input-textbox input-textbox-modal"
-            type="text"
-            name="expenseTypeName"
-            formControlName="expenseTypeName"
-            (keyup)="search_expenseTypes()"
-			(blur)="onSearchBlur('expenseType', 'expenseTypeName')"
-          />
-          <input
-            type="hidden"
-            id="expenseTypeID"
-            name="expenseTypeID"
-            value="{{ getForm().controls.expenseType.controls.expenseTypeID }}"
-          />
-          <div
-            class="autocomplete-results autocomplete-results-modal hidden-element"
-            id="searchResults_expenseType"
-            finance-app-autocomplete-search-element="expenseTypeName"
-          >
-            @for(currentExpenseType of search_expenseTypeResults(); track
-            currentExpenseType){ @if(currentExpenseType.expenseTypeID !== 0){
-            <div
-              class="autocomplete-result-item"
-              id="expenseTypeSearchResult_{{
-                currentExpenseType.expenseTypeID
-              }}"
-			  data-searchResultItemType="expenseType"
-              title="{{ currentExpenseType.expenseTypeName }}"
-              (click)="
-                click_expenseTypeResult(currentExpenseType.expenseTypeID)
-              "
-            >
-              {{ currentExpenseType.expenseTypeName }}
-            </div>
-            } @else {
-            <div
-              class="search-result-empty"
-              disabled="disabled"
-              (click)="hideElement('searchResults_expenseType')"
-            >
-              --- No Search Results ---
-            </div>
-            } }
-          </div>
-          @if(formControlHasError(getForm().controls.expenseType.controls.expenseTypeName)){
-          {{
-            updateFormControlErrorLabelHTML(
-              getForm().controls.expenseType.controls.expenseTypeName
-            )
-          }}
-          <label class="error-label" id="errorLabel_expenseTypeName"></label>
-          }
-          @if(formControlHasError(getForm().controls.expenseType.controls.expenseTypeID)){
-          {{
-            updateFormControlErrorLabelHTML(
-              getForm().controls.expenseType.controls.expenseTypeID
-            )
-          }}
-          <label class="error-label" id="errorLabel_expenseTypeID"></label>
-          }
-        </div>
-      </div>
-      <!-- Payment Type Name -->
-      <div formGroupName="paymentType">
-        <div>
-          <label
-            for="paymentTypeName"
-            class="input-label-modal top-margin-spacing"
-          >
-            Payment Type :
-          </label>		 
-		  <input
-            id="paymentTypeName"
-            class="input-textbox input-textbox-modal"
-            type="text"
-            name="paymentTypeName"
-            formControlName="paymentTypeName"
-            (keyup)="search_paymentTypes()"
-			(blur)="onSearchBlur('paymentType', 'paymentTypeName')"
-          />
-          <input
-            type="hidden"
-            id="paymentTypeID"
-            name="paymentTypeID"
-            value="{{ getForm().controls.paymentType.controls.paymentTypeID }}"
-          />
-          <input
-            type="hidden"
-            id="paymentTypeCategoryID"
-            name="paymentTypeCategoryID"
-            value="{{
-              getForm().controls.paymentType.controls.paymentTypeCategoryID
-            }}"
-          />
-          <div
-            class="autocomplete-results autocomplete-results-modal hidden-element"
-            id="searchResults_paymentType"
-            finance-app-autocomplete-search-element="paymentTypeName"
-          >
-            @for(currentPaymentType of search_paymentTypeResults(); track
-            currentPaymentType){ @if(currentPaymentType.paymentTypeID !== 0){
-            <div
-              class="autocomplete-result-item"
-              id="paymentTypeSearchResult_{{
-                currentPaymentType.paymentTypeID
-              }}"
-              title="{{ currentPaymentType.paymentTypeName }}"
-			  data-searchResultItemType="paymentType"
-              (click)="
-                click_paymentTypeResult(
-                  currentPaymentType.paymentTypeID,
-                  currentPaymentType.paymentTypeCategoryID
-                )
-              "
-            >
-              {{ currentPaymentType.paymentTypeName }}
-            </div>
-            }@else {
-
-            <div
-              class="search-result-empty"
-              disabled="disabled"
-              (click)="hideElement('searchResults_paymentType')"
-            >
-              --- No Search Results ---
-            </div>
-            } }
-          </div>
-          @if(formControlHasError(getForm().controls.paymentType.controls.paymentTypeName)){
-          {{
-            updateFormControlErrorLabelHTML(
-              getForm().controls.paymentType.controls.paymentTypeName
-            )
-          }}
-          <label class="error-label" id="errorLabel_paymentTypeName"></label>
-          }
-          @if(formControlHasError(getForm().controls.paymentType.controls.paymentTypeID)){
-          {{
-            updateFormControlErrorLabelHTML(
-              getForm().controls.paymentType.controls.paymentTypeID
-            )
-          }}
-          <label class="error-label" id="errorLabel_paymentTypeID"></label>
-          }
-        </div>
-      </div>
-
-      <!-- Investment / Income checkboxes -->
-      <div formGroupName="checkboxes" class="top-margin-spacing">
-        <div>
-          <input
-            id="isInvestment"
-            name="isInvestment"
-            formControlName="isInvestment"
-            class="form-check-input"
-            type="checkbox"
-            value=""
-            aria-label="Checkbox for following text input"
-          /><label for="isInvestment" class="input-label-modal"
-            >Investment?</label
-          >
-        </div>
-        <div>
-          <input
-            id="isIncome"
-            name="isIncome"
-            formControlName="isIncome"
-            class="form-check-input"
-            type="checkbox"
-            value=""
-            aria-label="Checkbox for following text input"
-          /><label for="isIncome" class="input-label-modal">Income?</label>
-        </div>
-      </div>
-      @if(formGroupHasError(getForm().controls.checkboxes)){
-      <label class="error-label">{{
-        getFormGroupErrorDetails(getForm().controls.checkboxes)
-      }}</label>
-      }
-    </form>
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button (click)="submitExpense()" cdkFocusInitial>Update</button>
-</mat-dialog-actions>
+<app-expense-modal-form [expenseData]="expenseData()"/>
