updated "features" screen to bring current functionality up to date.

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -3,8 +3,8 @@
 </p>
 <ul>
   <li>Multiple users with login page</li>
-  <li>
-    CRUD operations (<span class="text-strikethrough">Create, Read, Delete</span>, and Edit) for financial line items including:
+  <li><span class="text-strikethrough">
+    CRUD operations (Create, Read, Delete, and Edit) for financial line items including:
     <ul>
       <li>Expense Date</li>
       <li>Expense Description</li>
@@ -12,7 +12,7 @@
       <li>Expense Type</li>
       <li>Payment Type (withdrawal, deposit, credit, cash, cash app, etc)</li>
       <li>Payment Description</li>
-    </ul>
+    </ul></span>
   </li>
   <li>Monthly rollup</li>
   <li>Yearly rollup</li>
