- added IDs for navbar buttons - began updating unit tests for navbar

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navBar">
 <mat-card>
   <section>
-    <button [routerLink]="['/']" mat-button>Finances</button>
+    <button id="nav-button-finances" [routerLink]="['/']" mat-button>Finances</button>
     <!-- <button [routerLink]="['/test']" mat-button>Testing</button> -->
-    <button [routerLink]="['/about']" mat-button>About</button>
+    <button id="nav-button-about" [routerLink]="['/about']" mat-button>About</button>
   </section>
 </mat-card>
 </div>
